--- a/alumni-ratio-backend/pom.xml
+++ b/alumni-ratio-backend/pom.xml
@@ -13,5 +13,12 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>io.javalin</groupId>
+            <artifactId>javalin-bundle</artifactId>
+            <version>5.4.2</version>
+        </dependency>
+    </dependencies>
 
 </project>
