--- a/alumni-ratio-backend/pom.xml
+++ b/alumni-ratio-backend/pom.xml
@@ -13,8 +13,11 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <itext.version>7.2.5</itext.version>
+        <javalin.version>5.4.2</javalin.version>
+        <jackson.version>2.14.2</jackson.version>
     </properties>
     <dependencies>
+        <!-- iText7 PDF dependencies -->
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itext7-core</artifactId>
@@ -36,10 +39,12 @@
             <artifactId>layout</artifactId>
             <version>${itext.version}</version>
         </dependency>
+
+        <!-- Javalin Dependencies -->
         <dependency>
             <groupId>io.javalin</groupId>
-            <artifactId>javalin-bundle</artifactId>
-            <version>5.3.2</version>
+            <artifactId>javalin</artifactId>
+            <version>${javalin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -52,19 +57,32 @@
             <version>2.0.6</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <!-- Javalin Swagger Plugins -->
+        <dependency>
             <groupId>io.javalin.community.openapi</groupId>
             <artifactId>javalin-openapi-plugin</artifactId>
-            <version>5.4.2</version>
+            <version>${javalin.version}</version>
         </dependency>
+        <!--suppress VulnerableLibrariesLocal -->
         <dependency>
             <groupId>io.javalin.community.openapi</groupId>
             <artifactId>javalin-swagger-plugin</artifactId>
-            <version>5.4.2</version>
+            <version>${javalin.version}</version>
         </dependency>
         <dependency>
             <groupId>io.javalin.community.openapi</groupId>
             <artifactId>javalin-redoc-plugin</artifactId>
-            <version>5.4.2</version>
+            <version>${javalin.version}</version>
         </dependency>
     </dependencies>
 
@@ -79,7 +97,7 @@
                         <annotationProcessorPath>
                             <groupId>io.javalin.community.openapi</groupId>
                             <artifactId>openapi-annotation-processor</artifactId>
-                            <version>5.4.2</version>
+                            <version>${javalin.version}</version>
                         </annotationProcessorPath>
                     </annotationProcessorPaths>
                 </configuration>
@@ -96,7 +114,8 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>edu.pucmm.eict.AlumniRatioApplication</mainClass>
                                 </transformer>
                             </transformers>
