--- a/alumni-ratio-backend/pom.xml
+++ b/alumni-ratio-backend/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>edu.pucmm.eict</groupId>
-    <artifactId>alumni-ratio-backend</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>alumniratiobackend</artifactId>
+    <version>1</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -109,7 +109,7 @@
                 <version>3.4.1</version>
                 <executions>
                     <execution>
-                        <phase>install</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
                         </goals>
@@ -120,6 +120,18 @@
                                     <mainClass>edu.pucmm.eict.AlumniRatioApplication</mainClass>
                                 </transformer>
                             </transformers>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <shadedClassifierName>shaded</shadedClassifierName>
                         </configuration>
                     </execution>
                 </executions>
