--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^9.1.1",
