restructure changes for deployment

--- a/alumni-ratio-backend/Dockerfile
+++ b/alumni-ratio-backend/Dockerfile
@@ -5,7 +5,8 @@ COPY pom.xml .
 RUN mvn clean package -DskipTests
 
 FROM openjdk:17.0.2-slim
-EXPOSE 7000
+EXPOSE ${APP_PORT}
+EXPOSE ${MONGODB_URL}
 
 RUN mkdir /app
 COPY --from=build /usr/src/app/target/alumniratiobackend-1-shaded.jar /app/app.jar
@@ -13,5 +14,5 @@ COPY --from=build /usr/src/app/target/alumniratiobackend-1-shaded.jar /app/app.j
 ENTRYPOINT ["java", "-jar","/app/app.jar"]
 
 LABEL com.alumni-ratio.version="1.0"
-LABEL com.alumni-ratio.name="Alumni Ratio Application"
-LABEL com.alumni-ratio.description="Fullstack Application for Alumni Ratio"
+LABEL com.alumni-ratio.name="Alumni Ratio Backend"
+LABEL com.alumni-ratio.description="Backend API for Alumni Ratio application"
